--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -75,7 +75,7 @@ th:replace="~{base::layout(~{::section})}">
 							      <th scope="row">[[${c.count}]]</th>
 							      <td>[[${cat.name}]]</td>
 							      <td>[[${cat.isActive}]]</td>
-							      <td><img th:src="${cat.imageName}"
+							      <td><img th:src="@{'/img/'+${cat.imageName}}"
 							      			width="50px" height="50px"></td>
 							      <td><a th:href="@{'/admin/loadCategory/'+${cat.id}}" class="btn btn-primary btn-sm">
 							      		<i class="fa-solid fa-pen-to-square fa-1x"></i>
