--- a/src/main/resources/templates/admin/edit_product.html
+++ b/src/main/resources/templates/admin/edit_product.html
@@ -88,7 +88,7 @@ th:replace="~{base::layout(~{::section})}">
 								</div>
 								
 								<div class="mt-1">
-									<img th:src="${product.image}" 
+									<img th:src="@{'/img/'+${product.image}}" 
 										width="100px" height="100px">
 								</div>
 								
