--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -55,7 +55,7 @@ th:replace="~{base::layout(~{::section})}">
 						  <tbody>
 						    <tr th:each="p,c:${products}">
 						      <th scope="row">[[${c.count}]]</th>
-						      <td><img th:src="${p.image}"
+						      <td><img th:src="@{'/img/'+${p.image}}"
 						      		width = "70px" height = "70px"></td>
 						      <td>[[${p.title}]]</td>
 						      <td>[[${p.category}]]</td>
