--- a/src/main/resources/templates/admin/profile.html
+++ b/src/main/resources/templates/admin/profile.html
@@ -24,7 +24,7 @@
 					</th:block>
 					<hr>
 					<div class="text-center">
-						<img alt="" th:src="${user.profileImage}"
+						<img alt="" th:src="@{'../img/'+${user.profileImage}}"
 							class="border p-2"
 							style="width: 110px; height: 110px; border-radius: 50%;">
 					</div>
