--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -39,7 +39,7 @@ th:replace="~{base::layout(~{::section})}">
 						  <tbody>
 						    <tr th:each="u,c:${users}">
 						      <th scope="row">[[${c.count}]]</th>
-						      <td><img th:src="${u.profileImage}"
+						      <td><img th:src="@{'/img/'+${u.profileImage}}"
 						      		width = "70px" height = "70px"></td>
 						      <td>[[${u.name}]]</td>
 						      <td>[[${u.email}]]</td>
