--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -105,7 +105,7 @@
                       <div th:if="${p.discount <= 20 && p.discount >= 10}" class="badge bg-warning text-dark position-absolute top-0 end-0 m-2">Deal</div>
                       <div class="card-body text-center">
                         <div>
-                          <img th:src="${p.image}" alt="[[${p.title}]]"
+                          <img th:src="@{'/img/'+${p.image}}" alt="[[${p.title}]]"
                                class="img-fluid rounded mb-3 lazy" style="width: 100%; height: 180px; object-fit: cover;" loading="lazy">
                         </div>
                         <p class="product-title">[[${p.title}]]</p>
