--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -25,7 +25,7 @@
 					<hr>
 					<div class="text-center">
 						<!-- @{'../img/'+ -->
-						<img alt="" th:src="${user.profileImage}"
+						<img alt="" th:src="@{'/img/'+${user.profileImage}}"
 							class="border p-2"
 							style="width: 110px; height: 110px; border-radius: 50%;">
 					</div>
