--- a/src/main/resources/templates/view_product.html
+++ b/src/main/resources/templates/view_product.html
@@ -22,7 +22,7 @@ th:replace="~{base::layout(~{::section})}">
 					</th:block>
 					
 					<div class="col-md-6 text-end">
-						<img alt="" th:src="${product.image}" width="330px" height="400px">
+						<img alt="" th:src="@{'/img/'+${product.image}}" width="330px" height="400px">
 					</div>
 					<div class="col-md-6">
 						<p class="fs-3">[[${product.title}]]</p>
